refactor navigation bar component

--- a/src/components/UI/Header.module.scss
+++ b/src/components/UI/Header.module.scss
@@ -1,198 +1,122 @@
-$color-grey: #dbdbdb;
-$color-grey-dark: #8e8e8e;
-$navbar-max-width: 990px;
-*,
-*:after,
-*:before {
-  box-sizing: border-box;
-}
-
+@import url('//fonts.cdnfonts.com/css/billabong');
 body {
-  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
+  background: #fafafa;
 }
 
-.navbar {
-  border-bottom: 1px solid $color-grey;
+/* start header */
 
-  &__logo {
-    position: relative;
-    top: 3px;
-    font-family: cursive; 
-    font-size: 30px; 
-    text-decoration: none; 
-    color: #E1306C;
-  }
-}
-
-.inner-wrapper {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+.navigation {
+  background-color: #ffffff;
+  height: 80px;
+  position: fixed;
   width: 100%;
-  max-width: $navbar-max-width;
-  margin: 0 auto;
-  min-height: 54px;
-
-  @media screen and (max-width: $navbar-max-width) {
-    padding: 0 1.5rem;
-  }
+  top: 0;
+  left: 0;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.0975);
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  padding: 0px 50px;
+  box-sizing: border-box;
+  z-index: 2;
+  /* animation magic */
+  transition: all 0.4s ease-in-out;
+  -webkit-transition: all 0.4s ease-in-out;
+  -moz-transition: all 0.4s ease-in-out;
 }
 
-.main-nav {
+.shrink {
+  height: 50px;
+}
+
+.navigation .logo a {
   position: relative;
-  color: rgb(38, 38, 38);
+  color: #000000;
+  font-size: 30px;
+  font-family: "billabong", sans-serif;
+  text-decoration: none;
+}
 
-  &__nav-link {
-    display: inline-block;
+.navigation-search-container {
+  position: relative;
+}
 
-    &:not(:last-child) {
-      margin-right: 1rem;
-    }
-    
-    &:first-child &__logo {
-      opacity: 0;
-      display: none;
-    }
+.navigation-search-container input {
+  background-color: #fafafa;
+  padding: 3px 20px;
+  padding-left: 25px;
+  height: 30px;
+  box-sizing: border-box;
+  border: 1px solid rgba(0, 0, 0, 0.0975);
+  border-radius: 3px;
+  font-size: 14px;
+}
 
-    &__avatar {
-      background: url("https://i.pravatar.cc/150?img=67");
-      background-position: cover;
-      min-width: 22px;
-      min-height: 22px;
-      border: 1px solid $color-grey;
-      border-radius: 50%;
-      cursor: pointer;
-    }
-    
-    &__avatar-menu {
-      position: absolute;
-      top: 2.5rem;
-      left: 0;
-      right: 0;
-      box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.1);
-      border-radius: 8px;
-      font-size: 0.9rem;
-      z-index: 15;
-      transform: translateY(-15px);
-      opacity: 0;
-      transition: transform 150ms ease, opacity 150ms ease;
+.navigation-search-container .fa-search {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  font-size: 11px;
+  color: rgba(0, 0, 0, 0.5);
+}
 
-      li {
-        background-color: white;
-        list-style-type: none;
-
-        &:hover {
-          background-color: lighten($color-grey, 10%);
-        }
-
-        &:first-child {
-          position: relative;
-          
-          &:before {
-            content: "";
-            height: 50%;
-            width: 10%;
-            position: absolute;
-            top: -4px;
-            z-index: -1;
-            right: 18px;
-            background-color: white;
-            box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.1);
-            transform: rotate(45deg);
-          }
-          
-          &:hover:before {
-            background-color: lighten($color-grey, 10%);
-          }
-        }
-
-        a {
-          padding: 0.75rem 1rem;
-          &:visited,
-          &:link {
-            display: flex;
-            align-items: center;
-            text-decoration: none;
-            color: black;
-          }
-        }
-        
-        &:not(:last-child) {
-          a span {
-            margin-left: 1rem;
-          }
-        }
-        
-        &:last-child {
-          border-top: 1px solid $color-grey;
-        }
-      }
-    }
+@media only screen and (min-width: 320px) and (max-width: 650px) {
+  /* Navigation */
+  .navigation {
+    padding: 0 20px;
+    justify-content: space-between;
   }
-
-  &--notification {
-    position: relative;
-    &:before {
-      content: "2";
-      color: white;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      font-size: 0.7rem;
-      height: 65%;
-      width: 75%;
-      border-radius: 50%;
-      background-color: rgb(237, 73, 86);
-      position: absolute;
-      bottom: 14px;
-      right: -6px;
-    }
+  .navigation-search-container {
+    display: none;
+  }
+  .navigation-icons {
+    display: flex;
   }
 }
 
-.search-box {
-  border: 1px solid $color-grey;
-  min-height: 25px;
-  width: 215px;
-  max-width: 215px;
-  color: $color-grey-dark;
+.navigation-icons {
+  display: flex;
+}
+
+.navigation-search-container input:focus {
+  outline: none;
+}
+
+.navigation-search-container input::placeholder {
   text-align: center;
-  
-  &-wrapper {
-    position: relative;
-  }
-  
-  &-icon {
-    position: relative;
-    right: 65%;
-    bottom: 1px;
-    font-size: 0.6rem;
-    color: $color-grey-dark;
-  }
-
-  &:focus {
-    outline: none;
-    text-align: left;
-    padding-left: 28px;
-  }
-  
-  &:focus + &-icon {
-    right: 92%;
-  }
 }
 
-.visible {
-  opacity: 1 !important;
-  display: initial !important;
-  transform: translateY(0);
+.navigation-icons a {
+  text-decoration: none;
 }
 
-
-/*
-  stile per tutti i link della navbar:
-*/
-
-a {
-  text-decoration: none; 
+.navigation-link i {
+  margin-left: 30px;
   color: black;
+  text-decoration: none;
+  font-size: 22px;
 }
+
+.notification-bubble-wrapper {
+  position: relative;
+  top: -30px;
+  left: 17px;
+}
+
+.notification-bubble {
+  position: absolute;
+  min-width: 20px;
+  min-height: 20px;
+  border-radius: 50%;
+  background: #ff2c74;
+  color: #fff;
+  text-align: center;
+  font-size: 13px;
+  padding: 5px 5px 3px;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-weight: 500;
+  display: none;
+}
+
+/* end header */
