--- a/src/components/UI/PostCard.module.css
+++ b/src/components/UI/PostCard.module.css
@@ -66,7 +66,8 @@ a{
 }
 
 .user-comment{
-  color: #003569;
+  color: #17181a;
+  font-weight: bold;
 }
 
 .instagram-card-footer{
@@ -93,5 +94,6 @@ hr{
   border: none;
   margin-left: 10px;
   width: 100%;
+  outline: none;
 }
 
