--- a/src/components/pages/chat/ChatComponent/ChatComponent.module.scss
+++ b/src/components/pages/chat/ChatComponent/ChatComponent.module.scss
@@ -9,11 +9,12 @@
     position: absolute;
 
     margin: auto;
-    height: 90%;
+    height: 100%;
     right: 0px;
     left: 0px;
     display: flex;
     flex-direction: row;
+    padding-top: 80px;
 
 
     app-sidebar{ // --> quando faccio il refactor sposto il flex-basis qui
