added scroll to posts smooth onclick

--- a/src/components/pages/chat/ChatComponent/ChatComponent.module.scss
+++ b/src/components/pages/chat/ChatComponent/ChatComponent.module.scss
@@ -1,7 +1,7 @@
 *{
     margin: 0px;
     font-family: sans-serif;
-    color: #a2a3a4;
+    // color: #a2a3a4;
 }
 
 .chat-container{
@@ -17,7 +17,7 @@
     padding-top: 80px;
 
 
-    app-sidebar{ // --> quando faccio il refactor sposto il flex-basis qui
+    Sidebar{ // --> quando faccio il refactor sposto il flex-basis qui
         flex-basis: 30%;
         display: block;
         height: 100%;
