--- a/src/components/UI/QuestionCard.module.scss
+++ b/src/components/UI/QuestionCard.module.scss
@@ -2,7 +2,10 @@
     width: 70vw;
 }
 
-.likes {
-    font-size: 15px;
-    font-weight: bold;
+.color {
+    background-color: #ff2c74;
+}
+
+.color:hover {
+    background-color: #ff2c74;
 }
