--- a/src/components/pages/UpdateProfilePage/UpdateProfilePage.module.css
+++ b/src/components/pages/UpdateProfilePage/UpdateProfilePage.module.css
@@ -6,6 +6,7 @@ h1, h2, h3, h4, h5 {
     background-color: #E1306C;
     border-color: #ec2064;
     margin-top: 1em;
+    margin-bottom: 7px;
 }
 
 .row {
